fix: No more "jump" effect by slide change (.slide-product-description).

--- a/src/QUI/ProductBricks/Controls/Slider/ProductSlider.css
+++ b/src/QUI/ProductBricks/Controls/Slider/ProductSlider.css
@@ -42,6 +42,10 @@
     position: relative;
 }
 
+.quiqqer-productbricks-productslider .quiqqer-bricks-promoslider-slide-text {
+    width: 100%;
+}
+
 .quiqqer-productbricks-productslider .slide-product-description {
     line-height: 1.5em;
 }
